--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <load src="partials/header.html" />
     <main>
+      <load src="partials/hero.html" />
       <load src="partials/modal.html" />
     </main>
 
