--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <main>
       <load src="partials/hero.html" />
       <load src="partials/features.html" />
+      <load src="partials/video.html" />
       <load src="partials/modal.html" />
     </main>
 
