--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <load src="partials/hero.html" />
       <load src="partials/features.html" />
       <load src="partials/video.html" />
+      <load src="partials/team.html" />
       <load src="partials/modal.html" />
     </main>
 
