--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,18 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/hero.html" />
+      <load src="partials/hero1.html" />
       <load src="partials/features.html" />
+      <load src="partials/features1.html" />
       <load src="partials/video.html" />
+      <load src="partials/video1.html" />
       <load src="partials/team.html" />
+      <load src="partials/team1.html" />
+      <load src="partials/customers.html" />
+      <load src="partials/customers1.html" />
       <load src="partials/modal.html" />
     </main>
+    <load src="partials/footer.html" />
 
     <load src="partials/overlay.html" />
 
