--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     <link rel="shortcut icon" href="./img/Mobile.svg" type="image/svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobileapp</title>
+
+    <!-- User fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
