--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,14 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <load src="partials/header.html" />
     <main>
@@ -37,5 +43,6 @@
     <load src="partials/overlay.html" />
 
     <script type="module" src="/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </body>
 </html>
