--- a/src/index.html
+++ b/src/index.html
@@ -24,20 +24,29 @@
   </head>
 
   <body>
+    <!-- Andriy -->
     <load src="partials/header.html" />
     <main>
+      <!-- Ruslan -->
       <load src="partials/hero.html" />
       <load src="partials/hero1.html" />
+      <!-- Svitlana -->
       <load src="partials/features.html" />
       <load src="partials/features1.html" />
+      <!-- Krystyna -->
       <load src="partials/video.html" />
+      <!-- Olesya -->
       <load src="partials/video1.html" />
+      <!-- Artem -->
       <load src="partials/team.html" />
       <load src="partials/team1.html" />
+      <!-- Nadiia -->
       <load src="partials/customers.html" />
       <load src="partials/customers1.html" />
+      <!-- Andrew -->
       <load src="partials/modal.html" />
     </main>
+    <!-- Ivan -->
     <load src="partials/footer.html" />
 
     <load src="partials/overlay.html" />
